--- a/ch4practice.html
+++ b/ch4practice.html
@@ -11,7 +11,7 @@
     </style>
     <script src="three.js/build/three.js"></script>
     <script src="three.js/examples/js/controls/OrbitControls.js"></script>
-    <script src="dat.gui/build/dat.gui.min.js"></script>
+    <script type="text/javascript" src="./three.js/examples/js/libs/dat.gui.min.js"></script>
     <script>
         function init() {
 
