--- a/ch7practice.html
+++ b/ch7practice.html
@@ -11,7 +11,6 @@
     </style>
     <script src="three.js/build/three.js"></script>
     <script src="three.js/examples/js/controls/OrbitControls.js"></script>
-    <script src="dat.gui/build/dat.gui.min.js"></script>
     <script src="three.js/examples/js/geometries/ConvexGeometry.js"></script>
     <script src="three.js/examples/js/QuickHull.js"></script>
     <script>
@@ -22,7 +21,7 @@
 
             var scene = new THREE.Scene();
             var camera = new THREE.PerspectiveCamera(45, width / height, 0.1, 1000);
-            camera.position.set(-10, 10, 10);
+            camera.position.set(0, 0, 60);
 
             var controls = new THREE.OrbitControls(camera);
             var renderer = new THREE.WebGLRenderer({
@@ -69,14 +68,15 @@
         }
 
         function createParticleSystem(geom) {
-            var material = new THREE.ParticleBasicMaterial({
+            var material = new THREE.PointsMaterial({
                 color: 0xffffff,
                 size: 2,
                 transparent: true,
                 blending: THREE.AdditiveBlending,
-                map: generateSprite()
+                map: generateSprite(),
+                depthTest: false
             });
-            var system = new THREE.ParticleSystem(geom, material);
+            var system = new THREE.Points(geom, material);
             system.sortParticles = true;
             return system;
         }
@@ -111,7 +111,7 @@
                 points.push(point);
 
             }
-            console.log(points);
+
             return (points);
         }
 
