--- a/essentialsCh2.html
+++ b/essentialsCh2.html
@@ -18,6 +18,8 @@
     <script src="./three.js/examples/js/postprocessing/ShaderPass.js"></script>
     <script src="./three.js/examples/js/postprocessing/MaskPass.js"></script>
     <script src="./three.js/examples/js/shaders/CopyShader.js"></script>
+    <script src="./three.js/examples/js/shaders/FilmShader.js"></script>
+    <script src="./three.js/examples/js/postprocessing/FilmPass.js"></script>
 
 </head>
 
@@ -25,12 +27,12 @@
 
 
     <script>
-        var renderer, scene, camera, controls, cameraBG, sceneBG, composer;
+        var renderer, scene, camera, controls, cameraBG, sceneBG, composer, clock;
 
         function init() {
             // set up the earth scene and camera and renderer. 
             scene = new THREE.Scene();
-            camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
+            camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
             camera.position.set(25, 10, 23);
             camera.lookAt(scene.position);
             renderer = new THREE.WebGLRenderer();
@@ -68,7 +70,8 @@
             cameraBG = new THREE.OrthographicCamera(-window.innerWidth, window.innerWidth, window.innerHeight, -window.innerHeight, -10000, 10000);
             var materialColor = new THREE.MeshBasicMaterial({
                 map: new THREE.TextureLoader().load(
-                    "./essential-threejs/assets/textures/planets/starry_background.jpg")
+                    "./essential-threejs/assets/textures/planets/starry_background.jpg"),
+                depthTest: false
             });
             var bgPlane = new THREE.Mesh(new THREE.PlaneGeometry(1, 1), materialColor);
             bgPlane.position.z = -1000;
@@ -80,9 +83,11 @@
 
             // setup the passes
             var bgPass = new THREE.RenderPass(sceneBG, cameraBG);
+
             var renderPass = new THREE.RenderPass(scene, camera);
             renderPass.clear = false;
             var effectCopy = new THREE.ShaderPass(THREE.CopyShader);
+
             effectCopy.renderToScreen = true;
 
             // add these passes to the composer
@@ -95,9 +100,12 @@
             //Add the renderer to the page
             document.body.appendChild(renderer.domElement);
 
+
+
+
             render();
 
-            //Handle window Resizing
+
 
 
 
@@ -105,7 +113,8 @@
             function render() {
 
                 earthMesh.rotation.y += 0.001;
-                clouds.rotation.y += 0.002;
+                clouds.rotation.y += 0.0015;
+
                 controls.update();
                 renderer.autoClear = false;
                 composer.render();
@@ -118,6 +127,7 @@
 
         window.onload = init;
 
+        //Handle window Resizing
         window.addEventListener('resize', function() {
             renderer.setSize(window.innerWidth, window.innerHeight);
             camera.aspect = window.innerWidth / window.innerHeight;
