--- a/essentialsCh2.html
+++ b/essentialsCh2.html
@@ -32,7 +32,7 @@
         function init() {
             // set up the earth scene and camera and renderer. 
             scene = new THREE.Scene();
-            camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+            camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
             camera.position.set(25, 10, 23);
             camera.lookAt(scene.position);
             renderer = new THREE.WebGLRenderer();
@@ -106,10 +106,6 @@
             render();
 
 
-
-
-
-
             function render() {
 
                 earthMesh.rotation.y += 0.001;
@@ -138,9 +134,14 @@
 
         function createEarthMaterial() {
             var earthTexture = new THREE.TextureLoader().load("./essential-threejs/assets/textures/planets/earthmap4k.jpg");
+            var earthNormal = new THREE.TextureLoader().load("./essential-threejs/assets/textures/planets/earth_normalmap_flat4k.jpg");
+            var earthSpecular = new THREE.TextureLoader().load("./essential-threejs/assets/textures/planets/earthspec4k.jpg");
             var earthMaterial = new THREE.MeshPhongMaterial();
             earthTexture.anisotropy = renderer.capabilities.getMaxAnisotropy();
             earthMaterial.map = earthTexture;
+            earthMaterial.normalMap = earthNormal;
+            earthMaterial.specularMap = earthSpecular;
+            earthMaterial.specular = new THREE.Color(0x333333);
             return earthMaterial;
         }
 
